fixed menu dropdown clipping the map

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -36,3 +36,10 @@ img {
     width: 100%;
     grid-column: 1 / -1;
 }
+.ui.dropdown .menu {
+    z-index: 1000;
+}
+
+.leaflet-pane { 
+    z-index: 0 !important;
+}
